benchmarks, fixes #16